[package]
name = "arc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libarc_os"
path = "src/lib.rs"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
libm = "0.2"
novuskinc = "0.1"
compiler_builtins_patch = { git = "https://github.com/ardaku/compiler-builtins", tag = "novusk" }

[dependencies.ardaku]
git = "https://github.com/ardaku/ardaku"

# When v3 comes out (which should be soon) add the tag field
[dependencies.novusk]
# And change this to new-kernel
git = "https://github.com/NathanMcMillan54/novusk"
# rev = "9662ee6"
features = ["custom_config", "hifive", "rpi3"]
