[package]
name = "arc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libarc_os"
path = "src/lib.rs"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
libm = "0.2"
novuskinc = "0.1.1"
compiler_builtins_patch = { git = "https://github.com/ardaku/compiler-builtins", tag = "novusk" }

[dependencies.ardaku]
git = "https://github.com/ardaku/ardaku"

[dependencies.novusk]
git = "https://github.com/new-kernel/novusk"
tag = "v3"
features = ["custom_config", "hifive", "rpi3"]
