# Copyright (c) 2022 The Quantii Contributors
#
# This file is part of Quantii.
#
# Quantii is free software: you can redistribute
# it and/or modify it under the terms of the GNU
# Lesser General Public License as published by
# the Free Software Foundation, either version 3
# of the License, or (at your option) any later
# version.
#
# Quantii is distributed in the hope that it
# will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU
# Lesser General Public License along with
# Quantii. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "quantii"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "quantii"
path = "src/lib.rs"

[[bin]]
name = "quantii"
path = "src/main.rs"

[dependencies.libm]
version = "0.2"
features = ["unstable"]

[dependencies.novuskinc]
version = "0.1.1"

[dependencies.externc-libm]
git = "https://github.com/ardaku/externc-libm.git"
branch = "quantii"

[dependencies.ardaku]
git = "https://github.com/ardaku/ardaku.git"
rev = "7da6ce78a26a8f704b9c95d94cab4bd1c84c80e0"

[dependencies.novusk]
git = "https://github.com/NathanMcMillan54/novusk.git"
#tag = "v3.0.2"
features = ["custom_config", "hifive", "rpi3"]
rev = "b180e3e4fc2e47090c2f6ae16a27be7bfe836485"
