# Copyright (c) 2022 The Quantii Contributors
#
# This file is part of Quantii.
#
# Quantii is free software: you can redistribute
# it and/or modify it under the terms of the GNU
# Lesser General Public License as published by
# the Free Software Foundation, either version 3
# of the License, or (at your option) any later
# version.
#
# Quantii is distributed in the hope that it
# will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU
# Lesser General Public License along with
# Quantii. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "quantii-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
